--- a/TestDemo/WebContent/css/LandingPage.css
+++ b/TestDemo/WebContent/css/LandingPage.css
@@ -1,51 +1,110 @@
 body {
 	padding: 0;
-	margin: 0
+	margin: 0;
+	background: url(../images/loginPageBackground.jpg);
+	background-repeat: no-repeat;
+	background-size: auto 100vh;
 }
 
 body img {
-	height: 100vh
+	height: 100vh;
 }
 
 header {
+	background-color: rgba(255, 255, 255, 0.3);
 	left: 0;
 	top: 0;
 	padding: 0;
 	margin: 0;
-	height: 10%;
+	height: 15%;
 	width: auto;
-	border: 1px solid black;
+	
 }
 
+.logo {
+	margin: 0;
+	display: block;
+	height: 100px;
+	width: auto;
+	color: #fff;
+	font-family: Helvetica;
+	border-radius: 50%;
+	text-decoration: underline;
+	font-size: 20px;
+	animation: rotator 10s ease-in 1;
+	transform: translate(0px);
+}
 
+@keyframes rotator { 0%{
+	transform: translate(90%);
+}
+
+100%
+{
+transform
+:translate(0px)
+;
+	
+	
+}
+}
 .logo img {
+	z-index: 1; border-radius : 50%;
 	padding: 0;
 	margin: 0;
 	height: 100px;
 	width: 100px;
+	border-radius: 50%;
 }
 
-.Title {
+.Title { 
+	left: 40;
+	top: 13px;
+	right: 30;
+	margin-left: 8%;
+	border-radius: 10px;
 	text-align: center;
-	width: 80%;
+	width: 90%;
+	font-weight:bold;
 	height: 60px;
-	font-family: Courier;
-	margin-left: 10%;
-	top: -80px;
-	font-size: 30px;
-	border: 1px solid black;
+	font-family: Sans Seriff;
+	position: absolute;
+	/* margin-left: 10%; */
+	font-size: 50px;
+	background-color: rgba(0, 0, 0, 0.3);
+	color: #fff;
+	text-decoration: underline;
+	/* animation: resizer 10s cubic-bezier(0.42, 0.4, 0.58, 1.13) 1; */
 }
 
-.MenuList {
-	margin-right: 40%;
-	margin: 0;
-	list-style: none;
-	width: 40%;
-	float: right;
-	top: -95px;
-	padding: 20px;
-	left: 13%;
-	border: 1px solid black; 
+@keyframes resizer { 
+	
+	0% {
+		padding-top: 5px;
+		font-size: 30px;
+		background-color: rgba(255, 255, 255, 1);
+		}
+
+	50% {
+		font-weight:bold;
+		}
+	90% { 
+text-decoration:underline;
+        }
+     100%{
+      font-size:40px;
+      background-color:rgba(0,0,0,0.3);
+      color:#d04949;
+      }
+}
+.MenuList {    
+    position: absolute;    
+    margin: 0;   
+    list-style: none;    
+    left: 73%;
+    margin-top: 6%;
+    top: 0;
+    right: 5;
 }
 
 .MenuList li {
@@ -57,29 +116,166 @@ header {
 	background: #fff;
 	color: #000;
 	font-size: 20px;
+	opacity: 0.6;
 	height: 15px;
 	width: auto;
+	border-radius: 3px;
 	padding: 1px;
 }
-
-.categories {
-	height: 50px;
-	width: auto;
-	color: #fff;
-	border: 1px solid white;
-}
-
-.menuHeader {
-	padding: 0;
-	margin: 0;
-}
-
-.menuHeader li {
-	list-style: none;
+.DropDownMenu>div{
+ 	background-color: rgba(255, 255, 255, 0.3);
+	height: 40px;	
 	display: inline-block;
+	margin-right: 2px;
+	text-align: center;
+	text-align: center;
+	padding-right: 20px;
+	padding-left: 20px;
+	text-decoration: none;
+	color: purple;
+	font-size: 30px;
+	border-radius: 3px;
+	margin-bottom:5px;
+ }
+ 
+ 
+ 
+ .DropDownMenu{
+    margin-right:40%;
+   	margin-left:8%;
+    display: grid;
+    grid-template-columns: 30% 30% 30%;
+    
+ 
+ }
+ 
+.DropDownMenu > div:hover .OptionMenu{
+	
+	animation: spiral 1s ease;	
+	 animation-fill-mode: forwards;
+	 z-index:10;
+ }
+ 
+ @keyframes spiral{
+ 
+ 0%{
+ 	opacity:0;
+ 	 transform: rotateY(270deg);
+ }
+ 
+ 100%{
+ 	opacity:1;
+ 	 transform: rotateY(0deg);
+ }
+ }
+ 
+ .DropDownMenu > div:hover .OptionMenu li:nth-child(1){
+	transition-delay:0s;
+ }
+ 
+  .DropDownMenu > div:hover .OptionMenu li:nth-child(2){
+	transition-delay:1s;
+ }
+ 
+ .DropDownMenu > div:hover .OptionMenu li:nth-child(3){
+	transition-delay:2s;
+ } 
+ 
+ 
+ .OptionMenu >li >a {
+	text-decoration: none;
+	color: purple;
+	font-size: 20px;
+	z-index:10;
+	
+	
 }
 
-.optionItem li a {
-	color: #fff;
-	display: none
+.OptionMenu {
+	z-index:10;
+	position: relative;
+	margin-top: 10px;
+	list-style: none;
+	opacity:0;
+}
+
+.OptionMenu li {
+	z-index:10;
+	border: 1px solid black;
+	height: 30px;
+	background: #ddd;
+	padding-left: 20px;
+	
+	
+}
+/* After HEADER  <!-- ################################################################## --> */
+.WhirlpoolDropDownContainer {
+	
+	margin-top:2px;
+	margin-left: 35%;
+	padding:10px;
+	height:50vh;
+	width:400px;
+	border:1px solid white;
+	position:relative;
+	animation: slider 20s cubic-bezier(0.5, 0.49, 0.74, 0.82) infinite;
+	
+}	
+
+@keyframes slider{
+	0%{
+	    background-image:url("../images/105.jpg");
+		background-size: cover;
+		background-repeat: no-repeat;
+		
+	}
+	
+	20%{
+	
+		transform: rotateY(90deg)
+		background-image:url("../images/120.jpg");
+		background-size: cover;
+		background-repeat: no-repeat;
+	}
+	
+	40%{
+	
+		background-image:url("../images/125.jpg");
+		background-size: cover;
+		background-repeat: no-repeat;
+	}
+	60%{
+	
+		background-image:url("../images/135.jpg");
+		background-size: cover;
+		background-repeat: no-repeat;
+	}
+	80%{
+	
+		background-image:url("../images/142.jpg");
+		background-size: cover;
+		background-repeat: no-repeat;
+	}
+	100%{
+	
+	background-image:url("../images/112.jpg");
+	background-size: cover;
+	background-repeat: no-repeat;
+	
+	}
+
+
+}
+
+
+.SlideShowBox{
+		background-color: rgba(255, 255, 255, 0.6);
+		width:99%;
+		height:54vh;
+		border:1px solid white;
+		margin-top: 50px;
+		
+	
+	
+	}
 }
