--- a/TestDemo/WebContent/css/LandingPage.css
+++ b/TestDemo/WebContent/css/LandingPage.css
@@ -142,10 +142,9 @@ text-decoration:underline;
  
  
  .DropDownMenu{
-     display:none;
     margin-right:40%;
    	margin-left:8%;
-    
+    display: grid;
     grid-template-columns: 30% 30% 30%;
     
  
